samples/nginx-network-policy/curl-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: curl
          image: curlimages/curl:latest
          command: [ "sleep", "infinity" ]
