samples/nginx-network-policy/nginx-bd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-db
  template:
    metadata:
      labels:
        app: nginx-db
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
