samples/nginx-network-policy/nginx-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-db
  ports:
    - port: 9090
      targetPort: 80
